--- a/_publish.yml
+++ b/_publish.yml
@@ -4,3 +4,5 @@
       url: 'https://matthewbjane.quarto.pub/correcting-effect-sizes-for-statistical-artifacts'
     - id: 0712c7c6-50c1-49f5-b2e4-204f4dca722e
       url: 'https://matthewbjane.quarto.pub/general-exam'
+    - id: 28ff3101-2421-43e7-b85a-6c6d3197f0dc
+      url: 'https://matthewbjane.quarto.pub/artifact-corrections-for-effect-sizes'
